--- a/isrpo12/MainWindow.xaml
+++ b/isrpo12/MainWindow.xaml
@@ -7,6 +7,8 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="137,106,0,0" VerticalAlignment="Top"/>
+        <TextBox HorizontalAlignment="Left" Margin="272,180,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
 
     </Grid>
 </Window>
