--- a/isrpo12/Window1.xaml
+++ b/isrpo12/Window1.xaml
@@ -6,7 +6,5 @@
         xmlns:local="clr-namespace:isrpo12"
         mc:Ignorable="d"
         Title="Window1" Height="450" Width="800">
-    <Grid>
-        
-    </Grid>
+    <Grid/>
 </Window>
